# uFilterPicker

./: CMakeLists.txt  README.md  conanfile.py
include/uFilterPicker/: characteristicFunction.hpp  detector.hpp  envelope.hpp  narrowBandFilter.hpp  options.hpp  pipeline.hpp  thresholdTrigger.hpp
src/: characteristicFunction.cpp  detector.cpp  envelope.cpp  getNow.hpp  narrowBandFilter.cpp  options.cpp  pipeline.cpp  thresholdTrigger.cpp
src/modules/: logger.cppm  utilities.cppm
testing/: utilities.cpp
